# hi-fi

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.project  hi-fi.cabal  shell.nix
.github/workflows/: ci.yml
bench/: Main.hs  hifi.html  hig.html
hi-fi-aeson/: CHANGELOG.md  LICENSE  hi-fi-aeson.cabal
hi-fi-aeson/src/HiFi/: Aeson.hs
hi-fi-aeson/test/: Main.hs
src/: HiFi.hs
src/HiFi/: Api.hs  GhcFacade.hs  ParseResultAction.hs  StringSing.hs  TcPlugin.hs
src/HiFi/Internal/: Types.hs
src/HiFi/TcPlugin/: Equality.hs  FieldGetters.hs  FoldFields.hs  HkdHasField.hs  HkdSetField.hs  Instantiate.hs  PluginInputs.hs  RecordParts.hs  ToRecord.hs  Utils.hs
test/: Main.hs
test-data/: Record.hs  test-data.cabal
type-error-test/: InScopeDataCon.hs  IncorrectFunctor.hs  IncorrectType.hs  InfiniteNesting.hs  Main.hs  MissingField.hs  OutOfScopeDataCon.hs  QualifiedImport.hs  UnknownField.hs  UnsatisfiedConstraint.hs  run-test
