cabal-version:      3.0
name:               hi-fi
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Aaron Allen
maintainer:         aaronallen8455@gmail.com
-- copyright:
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  HiFi,
                      HiFi.Internal.Types
    other-modules: HiFi.GhcFacade,
                   HiFi.Api,
                   HiFi.TcPlugin,
                   HiFi.ParseResultAction
    -- other-extensions:
    build-depends:    base ^>=4.17.0.0,
                      ghc >= 9.2.0,
                      primitive,
                      syb,
                      transformers,
                      bytestring
    hs-source-dirs:   src
    default-language: GHC2021

test-suite hi-fi-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    ghc-options: -fplugin HiFi
                 -Wno-orphans
                 -O2
    build-depends:
        base ^>=4.17.0.0,
        hi-fi,
        tasty,
        tasty-hunit,
        tasty-quickcheck,
        quickcheck-properties

benchmark hi-fi-bench
  import: warnings
  default-language: GHC2021
  type: exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is: Main.hs
  ghc-options: -fplugin HiFi
               -freduction-depth=0
  build-depends:
    base,
    hi-fi,
    criterion,
    barbies,
    higgledy,
    generic-lens
